--- a/Frontend/src/styles/Home.css
+++ b/Frontend/src/styles/Home.css
@@ -1,7 +1,7 @@
 /* src/styles/RootPage.css */
 
 .landing-root {
-  background-color: #060010;
+  background-color: black;
   position: relative;
   min-height: 100vh;
   width: 100%;
